fixing slightly (not responsive atm)

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,10 @@ ul img {
   padding-left: 15vw;
   padding-right: 15vw;
   margin-bottom: 15vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .contact {
@@ -93,7 +97,6 @@ li a:hover {
 }
 
 #top {
-  margin-top: 400px
   width: 100%;
   height: 100vh;
   vertical-align: middle;
@@ -111,15 +114,18 @@ li a:hover {
 #top p {
   height: 40px;
   font-size: 50px;
-  margin-top: auto
+  margin-top: auto;
   color: white;
   font-family: 'Montserrat', sans-serif;y: Circular,Helvetica,Arial,sans-serif;
 }
 
 #top img {
-  : 50px;
   height: 50px;
   bottom: 0;
+}
+
+#profileImage {
+  width: 50vh;
 }
 
 #arrow {
@@ -134,7 +140,7 @@ img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 100vw;
+  max-width: 90vw;
   position: relative;
   margin: auto;
 }
@@ -234,8 +240,7 @@ img {vertical-align: middle;}
   display: block;
   margin-left: auto;
   margin-right: auto;
-  height: auto;
-  width: 80vw;
+  height: 80vh;
 }
 
 .overlay {
@@ -249,13 +254,16 @@ img {vertical-align: middle;}
   opacity: 0;
   transition: .5s ease;
   background-color: black;
+  display: flex;
+  justify-content: center;
 }
 
 .overlayText {
-  text-align:center;
+  text-align: center;
   padding-top: 20%;
   padding-left: 10%;
   padding-right: 10%;
+  width: 70%;
 }
 
 .slideshow-container:hover .overlay {
